responsiveness to work section

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 
     <div class="section-two">
-      <div class="shadow shadow-work"></div>
+      <div class="shadow-work"></div>
       <div class="container container-narrow">
         <div class="content-two">
           <h3 class="title" id="work-title">
