glass cards added

--- a/index.html
+++ b/index.html
@@ -76,9 +76,24 @@
           </h3>
         </div>
         <div class="work-cards">
-          <h3 style="color: white">hello</h3>
-          <h3 style="color: white">hello</h3>
-          <h3 style="color: white">hello</h3>
+          <div class="card-work card-left">
+            <div class="image-card"></div>
+            <div class="title-card">
+              <h3>APP DEVELOPMENT</h3>
+            </div>
+            <div class="info-card">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                laboriosam eligendi doloremque mollitia! Voluptate pariatur
+                deserunt alias vero repellat.
+              </p>
+            </div>
+            <div class="read-btn-card">
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
+          <div class="card-work"></div>
+          <div class="card-work"></div>
         </div>
       </div>
     </div>
