--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         </div>
         <div class="work-cards">
           <div class="card-work card-left">
-            <div class="image-card"></div>
+            <div class="image-card">
+              <div class="circle-card circle-left"></div>
+            </div>
             <div class="title-card">
               <h3>APP DEVELOPMENT</h3>
             </div>
