finished card layout and design

--- a/index.html
+++ b/index.html
@@ -94,8 +94,42 @@
               <a href="#">READ MORE</a>
             </div>
           </div>
-          <div class="card-work"></div>
-          <div class="card-work"></div>
+          <div class="card-work card-middle">
+            <div class="image-card">
+              <div class="circle-card circle-middle"></div>
+            </div>
+            <div class="title-card">
+              <h3>WEB DEVELOPMENT</h3>
+            </div>
+            <div class="info-card">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                laboriosam eligendi doloremque mollitia! Voluptate pariatur
+                deserunt alias vero repellat.
+              </p>
+            </div>
+            <div class="read-btn-card">
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
+          <div class="card-work card-right">
+            <div class="image-card">
+              <div class="circle-card circle-right"></div>
+            </div>
+            <div class="title-card">
+              <h3>WEB DESIGN</h3>
+            </div>
+            <div class="info-card">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                laboriosam eligendi doloremque mollitia! Voluptate pariatur
+                deserunt alias vero repellat.
+              </p>
+            </div>
+            <div class="read-btn-card">
+              <a href="#">READ MORE</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
