images added to cards

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
         <div class="work-cards">
           <div class="card-work card-left">
             <div class="image-card">
-              <div class="circle-card circle-left"></div>
+              <div class="circle-card circle-left">
+                <img src="img/img-left-card.png" alt="" />
+              </div>
             </div>
             <div class="title-card">
               <h3>APP DEVELOPMENT</h3>
@@ -96,7 +98,9 @@
           </div>
           <div class="card-work card-middle">
             <div class="image-card">
-              <div class="circle-card circle-middle"></div>
+              <div class="circle-card circle-middle">
+                <img src="img/img-mid-card.png" alt="" />
+              </div>
             </div>
             <div class="title-card">
               <h3>WEB DEVELOPMENT</h3>
@@ -114,7 +118,9 @@
           </div>
           <div class="card-work card-right">
             <div class="image-card">
-              <div class="circle-card circle-right"></div>
+              <div class="circle-card circle-right">
+                <img src="img/img-right-card.png" alt="" />
+              </div>
             </div>
             <div class="title-card">
               <h3>WEB DESIGN</h3>
