--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="img/img-left-card.png" alt="" />
               </div>
             </div>
-            <div class="title-card">
+            <div class="title-card title-left">
               <h3>APP DEVELOPMENT</h3>
             </div>
             <div class="info-card">
@@ -103,16 +103,16 @@
               </div>
             </div>
             <div class="title-card">
-              <h3>WEB DEVELOPMENT</h3>
+              <h3 class="title-middle">WEB DEVELOPMENT</h3>
             </div>
-            <div class="info-card">
+            <div class="info-card info-middle">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
                 laboriosam eligendi doloremque mollitia! Voluptate pariatur
                 deserunt alias vero repellat.
               </p>
             </div>
-            <div class="read-btn-card">
+            <div class="read-btn-card read-middle">
               <a href="#">READ MORE</a>
             </div>
           </div>
@@ -142,5 +142,6 @@
 
     <script src="./js/about.js"></script>
     <script src="./js/work.js"></script>
+    <script src="./js/card.js"></script>
   </body>
 </html>
