--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
       </div>
     </div>
 
+    <div class="section-three">
+      <div id="container">
+        <canvas id="canvas3d"></canvas>
+      </div>
+    </div>
+    <script>
+      // Global namespace (backwards-compatibility)
+      var SPE = {};
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+    <script src="https://cdn.spline.design/lib/anime.min.js"></script>
+    <script src="https://cdn.spline.design/lib/spline.runtime.min.js"></script>
+    <script src="js/assets.js"></script>
+    <script src="js/scene.js"></script>
+    <script src="js/main.js"></script>
     <script src="./js/about.js"></script>
     <script src="./js/work.js"></script>
     <script src="./js/card.js"></script>
