--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="container container-narrow">
         <div class="content-two">
           <h3 class="title" id="work-title">
-            WHAT I DO
+            WHAT I DO.
             <div class="border border-two"></div>
           </h3>
         </div>
